--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@material-ui/core": "^4.12.1",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/x-data-grid": "^4.0.0",
+    "@mui/x-data-grid-pro": "^4.0.0",
     "axios": "^0.21.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.3",
